--- a/.env
+++ b/.env
@@ -17,3 +17,14 @@
 APP_ENV=dev
 APP_SECRET=a8f33643e7a02871f394615c9f32cdba
 ###< symfony/framework-bundle ###
+
+### Dropbox config ###
+DROPBOX_ACCESS_TOKEN=
+
+### AWS S3 config ###
+AWS_S3_ACCESS_ID=
+AWS_S3_ACCESS_SECRET=
+AWS_S3_BUCKET_NAME=
+
+### Local directory ###
+LOCAL_DIR=
