--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,30 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.2.5",
+        "php": ">=8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-imagick": "*",
+        "aws/aws-sdk-php": "^3.193",
+        "league/flysystem-aws-s3-v3": "^2.1",
+        "league/flysystem-bundle": "^2.0",
+        "spatie/dropbox-api": "^1.19",
+        "spatie/flysystem-dropbox": "^2.0",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
+        "symfony/finder": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/monolog-bundle": "^3.7",
         "symfony/runtime": "5.3.*",
         "symfony/yaml": "5.3.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.3.*",
+        "symfony/css-selector": "5.3.*",
+        "symfony/maker-bundle": "^1.33",
+        "symfony/phpunit-bridge": "^5.3"
     },
     "config": {
         "optimize-autoloader": true,
